# safeguard-studio

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
docs/: decisions.md
notebooks/: 01_eda.py
scripts/: download_data.py
src/: baseline_classifiers.py  transformer_classifier.py
