[project]
name = "safeguard-studio"
version = "0.1.0"
description = "AI Safety Research Portfolio: abuse classifiers, red-team evals, and agentic safety analysis"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
